Fix export csv exception due to immutable collections (#134)
* fix lists

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix test

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix test

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* add test on TimeSeriesStoreUtils

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix issue

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* fix checkstyle

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

---------

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>